Switch gap number & size to prevent errors with grid

--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -91,7 +91,7 @@ $gap: (
 }
 
 @mixin gap($size, $type) {
-  [class*="gap-"][class*="-#{$size}#{$type}"] {
+  [class*="gap-"][class*="-#{$type}#{$size}"] {
     gap: var(--gap#{$size});
   }
 }
